Fixed a few issues where 2 elements overlapped

--- a/css/index.css
+++ b/css/index.css
@@ -43,8 +43,7 @@ p {
 nav {
   background-color: black;
   text-align: left;
-  height: 85px;
-  /* justify-content: space-between;   */
+  height: 85px;  
 }
 .navIMG {
   align-self: left;
@@ -70,16 +69,18 @@ footer {
   right: 8px;
   left: 8px;
   height: 2rem;
-  /* Footer height */
 }
 footer p {
   top: 15px;
 }
+.animateQuote {
+  animation: fadein 2s;
+  animation-play-state: running;
+}
 .header-content {  
   display: flex;
   justify-content: flex-start;
-  width: 100%;
-  /* height: 350px; */
+  width: 100%;  
 }
 .headerQuoteDiv {
 display: flex;
@@ -98,12 +99,10 @@ animation: fadein 2s;
 }
 .headerIMG {
 border-radius: 80%;
+width: 100%;
 max-width: 500px;
 max-height: 300px;  
--webkit-animation-duration: 2s;
-animation-duration: 2s;
--webkit-animation-name: bounceIn;
-animation-name: bounceIn;
+animation: fadein 2s;
 }
 .ctaBtn {    
 color: white;
@@ -112,6 +111,7 @@ height: 30px;
 margin-right: 25px;
 background-color: rgba(243, 28, 132, 0.1);
 vertical-align: bottom;
+animation: fadein 2s;
 }
 .ctaBtn:hover  {
   background-color: black;  
@@ -169,10 +169,9 @@ body {
   font-size: 20px;
 }
 .imageSection {
-  margin-left: auto;
-  margin-right: auto;
   width: 50%;
-  text-align: right;
+  position: relative;
+  margin:0 auto;
 }
 h2 {
   color: white;
@@ -198,11 +197,11 @@ ul {
   height: 30px;
 }
 .imgBottom {
-  width: 250%;
+  margin: auto;
+  width: 100%;
   border-radius: 75%;
   max-width: 500px;
-  max-height: 300px;
-  right: 0px;
+  max-height: 300px;  
   animation: fadein 3s;
 }
 .bottomSection {
